# patterns-psu-4course

./: CMakeLists.txt  Invoker.hpp  data.tsv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h  parser_tree.cpp  parser_tree.h  simpleCalculator.pro
